# CSE472-blanket-challenge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  submission.csv
docs/: EVALUATION.md  QUESTIONNAIRE.md  READING.md  REPORT.md  SCHEDULE.md  TASK.md
final_project_implementation/: README.md  final.ipynb  requirements.txt  submission.csv
labs/01_causal_discovery/: README.md  causal-discovery.ipynb  lab1.ipynb  lab1_final.ipynb  lab1_group7.ipynb
labs/02_markov_blanket_iid/: README.md  lab2.ipynb  lab2_group7.ipynb
labs/03_markov_blanket_ood/: README.md  lab3.ipynb  lab3_final.ipynb  lab3_group7.ipynb
labs/04_final/: README.md  final.ipynb
labs/05_final_eval/: README.md  evaluation.ipynb  team.jsonl
report/: report.tex
solution/: .gitignore  README.md  baseline.py  config.yaml  finetuner.py  generator.py  main.py  mbmlp.py  requirements.txt  util.py  visualize.py
solution/report/: REPORT.md  references.bib
solution/runs/20251124_194116/: results.json  run_info.json  submission.csv
src/blanket/: __init__.py
src/blanket/datasets/: __init__.py  environments.py  io.py  scm.py  utils.py
src/blanket/feature_selection/: __init__.py  _direct_lingam_selector.py  _ges_selector.py  _notears_selector.py  _pc_selector.py  _utils.py
src/blanket/graph/: __init__.py  generator.py  generator_utils.py  graph.py  graph_config.py  graph_utils.py  graphdataset.py
src/blanket/metrics/: __init__.py  (+3 more)
submission/: CSE472_Project_2_final.ipynb  README.txt  encoded_features.csv  lab1.ipynb  lab2.ipynb  submission.csv
(+13 files in other folders)
