[project]
name = "blanket-challenge"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "causal-learn>=0.1.4.3",
    "datasets>=4.2.0",
    "ipykernel<7.0.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "watermark>=2.5.0",
]
